A fix for dotted line in navbar (on firefox)

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ body {
     overflow-x: hidden;
 }
 
+/* A fix to boostrap navbar dotted in firefox */
+a:focus {
+    outline: none;
+}
+
 
 /*    General Class   */
 
